<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <properties>
	<lib.lwjgl.version>3.1.3</lib.lwjgl.version>
    <lib.jogl.version>2.3.2</lib.jogl.version>
    <lib.guava.version>19.0</lib.guava.version>
    <lib.jgit.version>4.3.1.201605051710-r</lib.jgit.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.version>0.0.1-SNAPSHOT</project.version>
  </properties>
  <modelVersion>4.0.0</modelVersion>
  <groupId>in.tombo</groupId>
  <artifactId>kashiki</artifactId>
  <version>0.0.2-SNAPSHOT</version>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <encoding>${project.build.sourceEncoding}</encoding>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>in.tombo.kashiki.Kashiki</mainClass>
              <addClasspath>true</addClasspath>
              <classpathPrefix>lib</classpathPrefix>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.2-beta-5</version>
        <configuration>
          <descriptors>
            <descriptor>src/main/assembly/assembly.xml</descriptor>
          </descriptors>
        </configuration>
      </plugin>
<!-- 
      <plugin>
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <artifactId>launch4j-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>l4j-gui</id>
            <phase>package</phase>
            <goals>
              <goal>launch4j</goal>
            </goals>
            <configuration>
              <headerType>gui</headerType>
              <outfile>target/kashiki.exe</outfile>
              <jar>target/${project.artifactId}-${project.version}.jar</jar>
              <errTitle>App Err</errTitle>
              <classPath>
                <mainClass>in.tombo.kashiki.Kashiki</mainClass>
              </classPath>
              <icon>src/main/resources/in/tombo/kashiki/icon.ico</icon>
              <jre>
                <minVersion>1.8.0</minVersion>
                <maxVersion>1.9.0</maxVersion>
                <initialHeapSize>128</initialHeapSize>
                <maxHeapSize>1024</maxHeapSize>
              </jre>
              <versionInfo>
                <fileVersion>1.0.0.0</fileVersion>
                <txtFileVersion>1.0.0.0</txtFileVersion>
                <fileDescription>Desc</fileDescription>
                <copyright>C</copyright>
                <productVersion>1.0.0.0</productVersion>
                <txtProductVersion>1.0.0.0</txtProductVersion>
                <productName>Product</productName>
                <internalName>Product</internalName>
                <originalFilename>kashiki.exe</originalFilename>
              </versionInfo>
            </configuration>
          </execution>
        </executions>
      </plugin>
       -->
      <plugin>
        <groupId>com.zenjava</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>8.1.2</version>
        <configuration>
          <mainClass>in.tombo.kashiki.Kashiki</mainClass>
          <vendor>Mitoma Ryo</vendor>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl</artifactId>
      <version>${lib.lwjgl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl</artifactId>
      <version>${lib.lwjgl.version}</version>
      <classifier>natives-windows</classifier>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-glfw</artifactId>
      <version>${lib.lwjgl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-glfw</artifactId>
      <version>${lib.lwjgl.version}</version>
      <classifier>natives-windows</classifier>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-opengl</artifactId>
      <version>${lib.lwjgl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-opengl</artifactId>
      <version>${lib.lwjgl.version}</version>
      <classifier>natives-windows</classifier>
    </dependency>
    <!-- 
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-platform</artifactId>
      <version>${lib.lwjgl.version}</version>
      <classifier>natives-windows</classifier>
    </dependency>
     -->
    <dependency>
      <groupId>org.jogamp.jogl</groupId>
      <artifactId>jogl-all-main</artifactId>
      <version>${lib.jogl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jogamp.gluegen</groupId>
      <artifactId>gluegen-rt-main</artifactId>
      <version>${lib.jogl.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${lib.guava.version}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jgit</groupId>
      <artifactId>org.eclipse.jgit</artifactId>
      <version>${lib.jgit.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
